[project]
name = "project001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain-openai>=1.0.1",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "ruff>=0.14.4",
    "streamlit>=1.51.0",
]
